finished up with crud
